toolchain/internal/core/analysis/testdata/errors/enums/spread_namespaced.vdl
// @expect: E202

enum Role {
  ...Auth.BaseRole
  Admin
}
